# ProjectBack

./: .gitignore  .pre-commit-config.yaml  Makefile  docker.local.yaml  main.py  pyproject.toml  pytest.ini  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
tests/: conftest.py  test_handlers.py
tests/test_handlers/: create_handler_test.py  delete_handler_test.py  get_handler_test.py  test_create_handler.py  test_delete_handler.py  test_get_handler.py  test_update_handler.py  update_handler_test.py
