[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KalilovM <mn.kalilov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
alembic = "^1.13.1"
pytest = "^8.2.2"
asyncpg = "^0.29.0"
pytest-asyncio = "^0.23.7"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
