[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["KalilovM <mn.kalilov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
fastapi = "^0.111.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
pytest-asyncio = "0.21.2"
pytest = "8.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
httpx = "^0.27.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
